--- a/src/sphinx_lumina_theme/_static_src/css/typography.css
+++ b/src/sphinx_lumina_theme/_static_src/css/typography.css
@@ -125,7 +125,6 @@
   font-size: 0.9375rem;
   display: block;
   overflow-x: auto;
-  -webkit-overflow-scrolling: touch;
 }
 
 .lumina-article th {
